--- a/source/index.html
+++ b/source/index.html
@@ -114,6 +114,6 @@
       <button class="flat__close button button--close" type="button" aria-label="Закрыть"></button>
     </section>
   </main>
-  <script src="/node_modules/focus-visible/dist/focus-visible.min.js"></script>
+  <script src="js/focus-visible.min.js"></script>
 </body>
 </html>
